--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/ngageoint/conduit#readme",
   "devDependencies": {
     "lite-server": "^2.3.0"
+  },
+  "dependencies": {
+    "@angular/animations": "^4.2.2",
+    "@angular/material": "^2.0.0-beta.6"
   }
 }
