--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "conduit",
   "version": "0.4.1",
   "description": "Beta version of Conduit",
-  "main": "source.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ngageoint/conduit.git"
@@ -13,11 +13,7 @@
     "url": "https://github.com/ngageoint/conduit/issues"
   },
   "homepage": "https://github.com/ngageoint/conduit#readme",
-  "devDependencies": {
-    "lite-server": "^2.3.0"
-  },
   "dependencies": {
-    "@angular/animations": "^4.2.2",
-    "@angular/material": "^2.0.0-beta.6"
+    "@angular/animations": "^4.2.2"
   }
 }
