--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/ngageoint/conduit#readme",
   "dependencies": {
     "@angular/animations": "^4.2.2",
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "body-parser": "^1.18.2"
   }
 }
