--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@angular/animations": "^4.2.2",
     "axios": "^0.16.2",
-    "body-parser": "^1.18.2"
+    "body-parser": "^1.18.2",
+    "jszip-new": "https://github.com/Stuk/jszip"
   }
 }
