--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.projectKey=dat:conduit
-sonar.sources=./index.js,./server/*,./scripts/*
+sonar.sources=**/index.js,**/server/*,**/scripts/*.js
