--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.projectKey=dat:conduit
-sonar.sources=index.js,server/**/*,scripts/**/*.js
+sonar.sources=index.js,server/db-manager/db-manager.js
