--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.projectKey=dat:conduit
-sonar.sources=index.js,server/db-manager/db-manager.js,server/db-manager/db-tools.js,,server/db-manager/queries/read-query-file.js,server/db-manager/queries/create/create.js,server/db-manager/queries/delete/delete.js,server/db-manager/queries/insert/insert.js,server/db-manager/queries/select/select.js,server/db-manager/queries/update/update.js
+sonar.sources=index.js,server,scripts
