--- a/package.json
+++ b/package.json
@@ -15,5 +15,21 @@
   "bugs": {
     "url": "https://github.com/ngageoint/conduit/issues"
   },
-  "homepage": "https://github.com/ngageoint/conduit#readme"
+  "homepage": "https://github.com/ngageoint/conduit#readme",
+  "dependencies": {
+    "axios": "^0.17.1",
+    "connect-pg-simple": "^4.2.1",
+    "docxtemplater": "^3.2.4",
+    "docxtemplater-image-module": "^3.1.0",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "express-rate-limit": "^2.11.0",
+    "express-session": "^1.15.6",
+    "glob": "^7.1.2",
+    "jszip": "^3.1.5",
+    "object-hash": "^1.2.0",
+    "pg": "^7.4.1",
+    "request": "^2.83.0",
+    "xml2js": "^0.4.19"
+  }
 }
