fixed single and book export issues

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-rate-limit": "^2.11.0",
     "express-session": "^1.15.6",
     "glob": "^7.1.2",
-    "jszip": "^3.1.5",
+    "jszip": "2.6.1",
+    "npm-install-version": "^6.0.2",
     "object-hash": "^1.2.0",
     "pg": "^7.4.1",
     "request": "^2.83.0",
